[package]
name = "substreams-solana-quickstart"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
prost = "0.11"
num-bigint = "0.4"
bs58 = "0.5.0"
borsh = { version = "0.10.3"}

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"






