[package]
name = "substreams-solana-raydium-amm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Substreams (Matching CPMM)
substreams = "^0.6.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }

# Protobuf (Matching CPMM)
prost = "0.13"
prost-types = "0.13"

# Serde for JSON serialization (if needed)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Other useful crates (Matching CPMM)
hex = "0.4.3"
base64 = "0.21.5"
chrono = { version = "0.4", features = [ "std" ], default-features = false }
num-bigint = "0.4"
anyhow = "1.0.75"
thiserror = "1.0"
bs58 = "0.5.0"
borsh = "0.10.3"
anchor-lang = "0.28.0"
tokio = "=1.25.0"
log = "0.4.20"
num-traits = "0.2"

[profile.release]
lto = true
opt-level = "s"
strip = "debuginfo"

[build-dependencies]
# Matching CPMM
prost-build = "0.13"
anyhow = "1.0.75" # Add anyhow for build script 